# littlepudding

./: .gitignore  ChangeLog  Makefile.am  NEWS  autogen.sh  configure.ac  configure.ac.backup  control  description-pak  lmplayer.spec.example  packages.readme  trunk.spec
bindings/python/: Makefile.am  lmplayer.defs  lmplayer.override
data/: Makefile.am  doc.txt  lmplayer-classic.ui  lmplayer-default.ui  lmplayer-foobar.ui  lmplayer-library-prefs.ui  lmplayer-mini-control.ui  lmplayer-ui-switch-prefs.ui  lmplayer.cfg.example  lmplayer.desktop.in.in  lmplayer.desktop.old  lmplayer.schemas.in  lmplayer.schemas.xml  lmplayer.ui  lyricselectdlg.ui
data/icons/: Makefile.am
data/icons/hicolor/: Makefile.am
data/icons/hicolor/16x16/apps/: Makefile.am
data/icons/hicolor/22x22/apps/: Makefile.am
data/icons/hicolor/24x24/: Makefile.am
data/icons/hicolor/24x24/apps/: Makefile.am
data/icons/hicolor/32x32/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
docs/: Makefile.am  ttskin2lmp.py
docs/reference/: Makefile.am  lmplayer-docs.xml  lmplayer-plugins.xml  lmplayer-sections.txt  lmplayer.types  version.xml.in
liblmplayer-plugin/: Makefile.am  lmplayer-module.c  lmplayer-module.h  lmplayer-plugin-manager.c  lmplayer-plugin-manager.h  lmplayer-plugin.c  lmplayer-plugin.h  lmplayer-plugins-engine.c  lmplayer-plugins-engine.h  lmplayer-python-module.c  lmplayer-python-module.h  lmplayer-python-plugin.c  lmplayer-python-plugin.h
lyric-downloader/: Makefile.am  http_fetcher.c  http_fetcher.h  lmp_debug.c  lmp_debug.h  lyric_downloader.c  lyric_downloader.h  main.c  tt_codefunc.c  tt_codefunc.h
plugins/: Makefile.am
plugins/lmplayer/: Makefile.am  __init__.py
plugins/lyric/: Makefile.am  lmplayer-lyric.c  lyric.lmplayer-plugin.in
plugins/rereading/: Makefile.am  lmplayer-rereading.c  rereading.lmplayer-plugin  rereading.lmplayer-plugin.in  rereading.ui
plugins/status-icon/: Makefile.am  lmplayer-status-icon.c  status-icon.lmplayer-plugin.in
po/: @GETTEXT_PACKAGE@.pot  LINGUAS  POTFILES.in  en.po  en_CA.po  en_GB.po  zh_CN.po
src/: Makefile.am  audio-spectrum.c  audio-spectrum.h  lmplayer-config.c  lmplayer-config.h  lmplayer-debug.c  lmplayer-debug.h  lmplayer-dvb-setup.c  lmplayer-dvb-setup.h  lmplayer-encode.c  lmplayer-encode.h  lmplayer-interface.c  lmplayer-interface.h  lmplayer-magnetic.c  lmplayer-magnetic.h  lmplayer-menu.c  lmplayer-menu.h  lmplayer-notebook.c  lmplayer-notebook.h  lmplayer-object.c  lmplayer-object.h  lmplayer-open-location.c  lmplayer-open-location.h  lmplayer-options.c  lmplayer-options.h  lmplayer-playlist.c  lmplayer-playlist.h  lmplayer-prefs.c  lmplayer-prefs.h  lmplayer-private.h  lmplayer-remote-command.c  lmplayer-remote-command.h  lmplayer-search.c  lmplayer-search.h  lmplayer-skin.c  lmplayer-skin.h  lmplayer-statusbar.c  lmplayer-statusbar.h  lmplayer-tab.c  lmplayer-tab.h  (+8 more)
src/backend/: Makefile.am  bacon-resize.c  bacon-video-widget-gst-0.10.c  bacon-video-widget-gst-missing-plugins.c  bacon-video-widget-xine.c  bacon-video-widget.h  gstscreenshot.c  video-utils.c  video-utils.h
tests/: Makefile.am  test.c
